Eclipse_Java/编译实验/PA1/bin/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassDefnList

   2  ClassDefnList : ClassDefnList ClassDefn
   3                | ClassDefn

   4  VariableDecl : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | DOUBLE
   8       | BOOL
   9       | STRING
  10       | VOID
  11       | CLASS IDENTIFIER
  12       | Type '[' ']'

  13  FormalsList : FormalsList ',' Variable
  14              | Variable
  15              |

  16  FunctionDefn : STATIC Type IDENTIFIER '(' FormalsList ')' StmtBlock
  17               | Type IDENTIFIER '(' FormalsList ')' StmtBlock

  18  StmtBlock : '{' StmtList '}'

  19  ClassDefn : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  20  ExtendsClause : EXTENDS IDENTIFIER
  21                |

  22  FieldList : FieldList VariableDecl
  23            | FieldList FunctionDefn
  24            |

  25  StmtList : StmtList VariableDecl
  26           | StmtList StmtBlock
  27           | StmtList SimpleStmt ';'
  28           | StmtList PrintStmt ';'
  29           | StmtList BreakStmt ';'
  30           | StmtList ReturnStmt ';'
  31           | StmtList WhileStmt
  32           | StmtList ForStmt
  33           | StmtList IfStmt
  34           |

  35  Stmt : VariableDecl
  36       | StmtBlock
  37       | SimpleStmt ';'
  38       | PrintStmt ';'
  39       | BreakStmt ';'
  40       | ReturnStmt ';'
  41       | WhileStmt
  42       | ForStmt
  43       | IfStmt

  44  Constant : INT_CONST
  45           | DOUBLE_CONST
  46           | BOOL_CONST
  47           | STRING_CONST
  48           | NULL

  49  Expr : Constant
  50       | THIS
  51       | LValue
  52       | Call
  53       | '(' Expr ')'
  54       | READ_INTEGER '(' ')'
  55       | READ_LINE '(' ')'
  56       | NEW IDENTIFIER '(' ')'
  57       | NEW Type '[' Expr ']'
  58       | Expr '+' Expr
  59       | Expr '-' Expr
  60       | Expr '*' Expr
  61       | Expr '/' Expr
  62       | Expr '%' Expr
  63       | '-' Expr
  64       | Expr '<' Expr
  65       | Expr LESS_EQUAL Expr
  66       | Expr '>' Expr
  67       | Expr GREATER_EQUAL Expr
  68       | Expr EQUAL Expr
  69       | Expr NOT_EQUAL Expr
  70       | Expr AND Expr
  71       | Expr OR Expr
  72       | '!' Expr

  73  ExprList : ExprList ',' Expr
  74           | Expr

  75  PrintStmt : PRINT '(' ExprList ')'

  76  BreakStmt : BREAK

  77  ReturnStmt : RETURN Expr
  78             | RETURN

  79  Call : Expr '.' IDENTIFIER '(' Actuals ')'
  80       | IDENTIFIER '(' Actuals ')'

  81  Actuals : ExprList
  82          |

  83  LValue : Expr '.' IDENTIFIER
  84         | IDENTIFIER
  85         | Expr '[' Expr ']'

  86  SimpleStmt : LValue '=' Expr
  87             | Call
  88             |

  89  BoolExpr : Expr

  90  WhileStmt : WHILE '(' BoolExpr ')' Stmt

  91  ForStmt : FOR '(' SimpleStmt ';' BoolExpr ';' SimpleStmt ')' Stmt

  92  IfStmt : IF '(' BoolExpr ')' Stmt ELSE Stmt
  93         | IF '(' BoolExpr ')' Stmt

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassDefnList  goto 3
	ClassDefn  goto 4


state 1
	ClassDefn : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (19)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassDefnList .  (1)
	ClassDefnList : ClassDefnList . ClassDefn  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDefn  goto 6


state 4
	ClassDefnList : ClassDefn .  (3)

	.  reduce 3


state 5
	ClassDefn : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (19)
	ExtendsClause : .  (21)

	EXTENDS  shift 7
	'{'  reduce 21

	ExtendsClause  goto 8


state 6
	ClassDefnList : ClassDefnList ClassDefn .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (20)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDefn : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (19)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (20)

	.  reduce 20


state 10
	ClassDefn : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (19)
	FieldList : .  (24)

	.  reduce 24

	FieldList  goto 11


state 11
	ClassDefn : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (19)
	FieldList : FieldList . VariableDecl  (22)
	FieldList : FieldList . FunctionDefn  (23)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	DOUBLE  shift 15
	STRING  shift 16
	CLASS  shift 17
	STATIC  shift 18
	'}'  shift 19
	.  error

	VariableDecl  goto 20
	Variable  goto 21
	Type  goto 22
	FunctionDefn  goto 23


state 12
	Type : VOID .  (10)

	.  reduce 10


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : DOUBLE .  (7)

	.  reduce 7


state 16
	Type : STRING .  (9)

	.  reduce 9


state 17
	Type : CLASS . IDENTIFIER  (11)

	IDENTIFIER  shift 24
	.  error


state 18
	FunctionDefn : STATIC . Type IDENTIFIER '(' FormalsList ')' StmtBlock  (16)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	DOUBLE  shift 15
	STRING  shift 16
	CLASS  shift 17
	.  error

	Type  goto 25


state 19
	ClassDefn : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (19)

	.  reduce 19


state 20
	FieldList : FieldList VariableDecl .  (22)

	.  reduce 22


state 21
	VariableDecl : Variable . ';'  (4)

	';'  shift 26
	.  error


state 22
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)
	FunctionDefn : Type . IDENTIFIER '(' FormalsList ')' StmtBlock  (17)

	IDENTIFIER  shift 27
	'['  shift 28
	.  error


state 23
	FieldList : FieldList FunctionDefn .  (23)

	.  reduce 23


state 24
	Type : CLASS IDENTIFIER .  (11)

	.  reduce 11


state 25
	Type : Type . '[' ']'  (12)
	FunctionDefn : STATIC Type . IDENTIFIER '(' FormalsList ')' StmtBlock  (16)

	IDENTIFIER  shift 29
	'['  shift 28
	.  error


state 26
	VariableDecl : Variable ';' .  (4)

	.  reduce 4


state 27
	Variable : Type IDENTIFIER .  (5)
	FunctionDefn : Type IDENTIFIER . '(' FormalsList ')' StmtBlock  (17)

	'('  shift 30
	';'  reduce 5


state 28
	Type : Type '[' . ']'  (12)

	']'  shift 31
	.  error


state 29
	FunctionDefn : STATIC Type IDENTIFIER . '(' FormalsList ')' StmtBlock  (16)

	'('  shift 32
	.  error


state 30
	FunctionDefn : Type IDENTIFIER '(' . FormalsList ')' StmtBlock  (17)
	FormalsList : .  (15)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	DOUBLE  shift 15
	STRING  shift 16
	CLASS  shift 17
	','  reduce 15
	')'  reduce 15

	Variable  goto 33
	Type  goto 34
	FormalsList  goto 35


state 31
	Type : Type '[' ']' .  (12)

	.  reduce 12


state 32
	FunctionDefn : STATIC Type IDENTIFIER '(' . FormalsList ')' StmtBlock  (16)
	FormalsList : .  (15)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	DOUBLE  shift 15
	STRING  shift 16
	CLASS  shift 17
	','  reduce 15
	')'  reduce 15

	Variable  goto 33
	Type  goto 34
	FormalsList  goto 36


state 33
	FormalsList : Variable .  (14)

	.  reduce 14


state 34
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)

	IDENTIFIER  shift 37
	'['  shift 28
	.  error


state 35
	FormalsList : FormalsList . ',' Variable  (13)
	FunctionDefn : Type IDENTIFIER '(' FormalsList . ')' StmtBlock  (17)

	','  shift 38
	')'  shift 39
	.  error


state 36
	FormalsList : FormalsList . ',' Variable  (13)
	FunctionDefn : STATIC Type IDENTIFIER '(' FormalsList . ')' StmtBlock  (16)

	','  shift 38
	')'  shift 40
	.  error


state 37
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 38
	FormalsList : FormalsList ',' . Variable  (13)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	DOUBLE  shift 15
	STRING  shift 16
	CLASS  shift 17
	.  error

	Variable  goto 41
	Type  goto 34


state 39
	FunctionDefn : Type IDENTIFIER '(' FormalsList ')' . StmtBlock  (17)

	'{'  shift 42
	.  error

	StmtBlock  goto 43


state 40
	FunctionDefn : STATIC Type IDENTIFIER '(' FormalsList ')' . StmtBlock  (16)

	'{'  shift 42
	.  error

	StmtBlock  goto 44


state 41
	FormalsList : FormalsList ',' Variable .  (13)

	.  reduce 13


state 42
	StmtBlock : '{' . StmtList '}'  (18)
	StmtList : .  (34)

	.  reduce 34

	StmtList  goto 45


state 43
	FunctionDefn : Type IDENTIFIER '(' FormalsList ')' StmtBlock .  (17)

	.  reduce 17


state 44
	FunctionDefn : STATIC Type IDENTIFIER '(' FormalsList ')' StmtBlock .  (16)

	.  reduce 16


state 45
	StmtBlock : '{' StmtList . '}'  (18)
	StmtList : StmtList . VariableDecl  (25)
	StmtList : StmtList . StmtBlock  (26)
	StmtList : StmtList . SimpleStmt ';'  (27)
	StmtList : StmtList . PrintStmt ';'  (28)
	StmtList : StmtList . BreakStmt ';'  (29)
	StmtList : StmtList . ReturnStmt ';'  (30)
	StmtList : StmtList . WhileStmt  (31)
	StmtList : StmtList . ForStmt  (32)
	StmtList : StmtList . IfStmt  (33)
	SimpleStmt : .  (88)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	DOUBLE  shift 15
	STRING  shift 16
	CLASS  shift 17
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	IF  shift 50
	RETURN  shift 51
	BREAK  shift 52
	NEW  shift 53
	PRINT  shift 54
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	STRING_CONST  shift 57
	INT_CONST  shift 58
	BOOL_CONST  shift 59
	DOUBLE_CONST  shift 60
	IDENTIFIER  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'{'  shift 42
	'}'  shift 65
	';'  reduce 88

	VariableDecl  goto 66
	Variable  goto 21
	Type  goto 34
	StmtBlock  goto 67
	SimpleStmt  goto 68
	PrintStmt  goto 69
	BreakStmt  goto 70
	ReturnStmt  goto 71
	WhileStmt  goto 72
	ForStmt  goto 73
	IfStmt  goto 74
	Constant  goto 75
	Expr  goto 76
	LValue  goto 77
	Call  goto 78


state 46
	Constant : NULL .  (48)

	.  reduce 48


state 47
	Expr : THIS .  (50)

	.  reduce 50


state 48
	WhileStmt : WHILE . '(' BoolExpr ')' Stmt  (90)

	'('  shift 79
	.  error


state 49
	ForStmt : FOR . '(' SimpleStmt ';' BoolExpr ';' SimpleStmt ')' Stmt  (91)

	'('  shift 80
	.  error


state 50
	IfStmt : IF . '(' BoolExpr ')' Stmt ELSE Stmt  (92)
	IfStmt : IF . '(' BoolExpr ')' Stmt  (93)

	'('  shift 81
	.  error


state 51
	ReturnStmt : RETURN . Expr  (77)
	ReturnStmt : RETURN .  (78)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	STRING_CONST  shift 57
	INT_CONST  shift 58
	BOOL_CONST  shift 59
	DOUBLE_CONST  shift 60
	IDENTIFIER  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	';'  reduce 78

	Constant  goto 75
	Expr  goto 82
	LValue  goto 83
	Call  goto 84


state 52
	BreakStmt : BREAK .  (76)

	.  reduce 76


state 53
	Expr : NEW . IDENTIFIER '(' ')'  (56)
	Expr : NEW . Type '[' Expr ']'  (57)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	DOUBLE  shift 15
	STRING  shift 16
	CLASS  shift 17
	IDENTIFIER  shift 85
	.  error

	Type  goto 86


state 54
	PrintStmt : PRINT . '(' ExprList ')'  (75)

	'('  shift 87
	.  error


state 55
	Expr : READ_INTEGER . '(' ')'  (54)

	'('  shift 88
	.  error


state 56
	Expr : READ_LINE . '(' ')'  (55)

	'('  shift 89
	.  error


state 57
	Constant : STRING_CONST .  (47)

	.  reduce 47


state 58
	Constant : INT_CONST .  (44)

	.  reduce 44


state 59
	Constant : BOOL_CONST .  (46)

	.  reduce 46


state 60
	Constant : DOUBLE_CONST .  (45)

	.  reduce 45


state 61
	Call : IDENTIFIER . '(' Actuals ')'  (80)
	LValue : IDENTIFIER .  (84)

	'('  shift 90
	AND  reduce 84
	OR  reduce 84
	LESS_EQUAL  reduce 84
	GREATER_EQUAL  reduce 84
	EQUAL  reduce 84
	NOT_EQUAL  reduce 84
	'+'  reduce 84
	'-'  reduce 84
	'*'  reduce 84
	'/'  reduce 84
	'%'  reduce 84
	'='  reduce 84
	'>'  reduce 84
	'<'  reduce 84
	'.'  reduce 84
	','  reduce 84
	';'  reduce 84
	')'  reduce 84
	'['  reduce 84
	']'  reduce 84


state 62
	Expr : '-' . Expr  (63)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	STRING_CONST  shift 57
	INT_CONST  shift 58
	BOOL_CONST  shift 59
	DOUBLE_CONST  shift 60
	IDENTIFIER  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	Constant  goto 75
	Expr  goto 91
	LValue  goto 83
	Call  goto 84


state 63
	Expr : '!' . Expr  (72)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	STRING_CONST  shift 57
	INT_CONST  shift 58
	BOOL_CONST  shift 59
	DOUBLE_CONST  shift 60
	IDENTIFIER  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	Constant  goto 75
	Expr  goto 92
	LValue  goto 83
	Call  goto 84


state 64
	Expr : '(' . Expr ')'  (53)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	STRING_CONST  shift 57
	INT_CONST  shift 58
	BOOL_CONST  shift 59
	DOUBLE_CONST  shift 60
	IDENTIFIER  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	.  error

	Constant  goto 75
	Expr  goto 93
	LValue  goto 83
	Call  goto 84


state 65
	StmtBlock : '{' StmtList '}' .  (18)

	.  reduce 18


state 66
	StmtList : StmtList VariableDecl .  (25)

	.  reduce 25


state 67
	StmtList : StmtList StmtBlock .  (26)

	.  reduce 26


state 68
	StmtList : StmtList SimpleStmt . ';'  (27)

	';'  shift 94
	.  error


state 69
	StmtList : StmtList PrintStmt . ';'  (28)

	';'  shift 95
	.  error


state 70
	StmtList : StmtList BreakStmt . ';'  (29)

	';'  shift 96
	.  error


state 71
	StmtList : StmtList ReturnStmt . ';'  (30)

	';'  shift 97
	.  error


state 72
	StmtList : StmtList WhileStmt .  (31)

	.  reduce 31


state 73
	StmtList : StmtList ForStmt .  (32)

	.  reduce 32


state 74
	StmtList : StmtList IfStmt .  (33)

	.  reduce 33


state 75
	Expr : Constant .  (49)

	.  reduce 49


state 76
	Expr : Expr . '+' Expr  (58)
	Expr : Expr . '-' Expr  (59)
	Expr : Expr . '*' Expr  (60)
	Expr : Expr . '/' Expr  (61)
	Expr : Expr . '%' Expr  (62)
	Expr : Expr . '<' Expr  (64)
	Expr : Expr . LESS_EQUAL Expr  (65)
	Expr : Expr . '>' Expr  (66)
	Expr : Expr . GREATER_EQUAL Expr  (67)
	Expr : Expr . EQUAL Expr  (68)
	Expr : Expr . NOT_EQUAL Expr  (69)
	Expr : Expr . AND Expr  (70)
	Expr : Expr . OR Expr  (71)
	Call : Expr . '.' IDENTIFIER '(' Actuals ')'  (79)
	LValue : Expr . '.' IDENTIFIER  (83)
	LValue : Expr . '[' Expr ']'  (85)

	AND  shift 98
	OR  shift 99
	LESS_EQUAL  shift 100
	GREATER_EQUAL  shift 101
	EQUAL  shift 102
	NOT_EQUAL  shift 103
	'+'  shift 104
	'-'  shift 105
	'*'  shift 106
	'/'  shift 107
	'%'  shift 108
	'>'  shift 109
	'<'  shift 110
	'.'  shift 111
	'['  shift 112
	.  error


state 77
	Expr : LValue .  (51)
	SimpleStmt : LValue . '=' Expr  (86)

	'='  shift 113
	AND  reduce 51
	OR  reduce 51
	LESS_EQUAL  reduce 51
	GREATER_EQUAL  reduce 51
	EQUAL  reduce 51
	NOT_EQUAL  reduce 51
	'+'  reduce 51
	'-'  reduce 51
	'*'  reduce 51
	'/'  reduce 51
	'%'  reduce 51
	'>'  reduce 51
	'<'  reduce 51
	'.'  reduce 51
	'['  reduce 51


state 78
	Expr : Call .  (52)
	SimpleStmt : Call .  (87)

	AND  reduce 52
	OR  reduce 52
	LESS_EQUAL  reduce 52
	GREATER_EQUAL  reduce 52
	EQUAL  reduce 52
	NOT_EQUAL  reduce 52
	'+'  reduce 52
	'-'  reduce 52
	'*'  reduce 52
	'/'  reduce 52
	'%'  reduce 52
	'>'  reduce 52
	'<'  reduce 52
	'.'  reduce 52
	';'  reduce 87
	')'  reduce 87
	'['  reduce 52


state 79
	WhileStmt : WHILE '(' . BoolExpr ')' Stmt  (90)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	STRING_CONST  shift 57
	INT_CONST  shift 58
	BOOL_CONST  shift 59
